<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="@dimen/dimen_6dp"
    tools:context=".ui.character.CharacterDetailFragment">

    <ImageView
        android:id="@+id/imgCharacterImageDetail"
        android:layout_width="@dimen/dimen_180dp"
        android:layout_height="@dimen/dimen_250dp"
        android:contentDescription="@string/characterImage"
        android:layout_margin="@dimen/dimen_5dp"
        android:scaleType="centerCrop"
        tools:src="@mipmap/ic_launcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/subtitleName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:padding="@dimen/dimen_4dp"
        android:textSize="@dimen/dimen_text_16sp"
        android:textColor="@color/title"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgCharacterImageDetail"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txtCharacterNameDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/characterName"
        android:lines="1"
        android:ellipsize="end"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:padding="@dimen/dimen_4dp"
        android:textSize="@dimen/dimen_text_16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitleName"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/subtitleDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:padding="@dimen/dimen_4dp"
        android:textSize="@dimen/dimen_text_16sp"
        android:textColor="@color/title"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtCharacterNameDetail"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/descriptionCharacterDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/characterName"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:padding="@dimen/dimen_4dp"
        android:textSize="@dimen/dimen_text_16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitleDescription"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/subtitleComics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comics"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:padding="@dimen/dimen_4dp"
        android:textSize="@dimen/dimen_text_16sp"
        android:textColor="@color/title"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionCharacterDetail"
        app:layout_constraintEnd_toEndOf="parent"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/characterRecyclerViewDetail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dimen_5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitleComics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>